--- a/index.html
+++ b/index.html
@@ -1,12 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scroll Project</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <!-- header-->
+    <header id="home">
+      <!-- nav bar -->
+      <nav id="nav">
+        <div class="nav-centre">
+          <!-- nav header -->
+          <div class="nav-header">
+            <img src="logo.svg" alt="logo" class="logo" />
+            <button class="nav-toggle">
+              <i class="fas fa-bars"></i>
+            </button>
+          </div>
+          <!-- links -->
+          <div class="links-container">
+            <ul class="links">
+              <li>
+                <a href="#home" class="scroll-link">home</a>
+              </li>
+              <li>
+                <a href="#about" class="scroll-link">about</a>
+              </li>
+              <li>
+                <a href="#services" class="scroll-link">services</a>
+              </li>
+              <li>
+                <a href="#tours" class="scroll-link">tours</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- banner -->
+      <div class="banner">
+        <h1>Scroll Project</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+          doloremque cumque commodi sequi odit quod atque. Dignissimos, iste
+          tempore laborum illo quasi, doloremque quis deleniti inventore minima
+          ullam soluta accusamus?
+        </p>
+        <a href="#tours" class="scroll-link btn btn-white">Explore tours</a>
+      </div>
+    </header>
+    <!-- about -->
+    <section id="about" class="section">
+      <div class="title">
+        <h2>About <span>Us</span></h2>
+      </div>
+    </section>
+    <!-- services -->
+    <section id="services" class="section">
+      <div class="title">
+        <h2>Our <span>Services</span></h2>
+      </div>
+    </section>
+    <!-- tours -->
+    <section id="tours" class="section">
+      <div class="title">
+        <h2>Featured <span>Tours</span></h2>
+      </div>
+    </section>
+    <!-- footer -->
+    <footer class="section">
+      <p>
+        copyright &copy; backroads travel tours company
+        <span id="date">  </span>
+        .all rights reserved
+      </p>
+    </footer>
+    <!-- back to top link-->
+    <a href="#home" class="scroll-link top-link">
+        <i class="fas fa-arrow-up"></i>
+    </a>
+
+    <!-- javascript -->
+    <script src="app.js"></script>
+  </body>
 </html>
